[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/HostButton.gd" type="Script" id=1]
[ext_resource path="res://Scripts/JoinButton.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Connecting.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=5]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="."]
margin_left = 399.0
margin_top = 96.0
margin_right = 634.0
margin_bottom = 158.0
text = "Host"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="Label" parent="Host"]
margin_left = 1.0
margin_top = 43.0
margin_right = 237.0
margin_bottom = 63.0
align = 1
valign = 1

[node name="InvalidName" type="Label" parent="Host"]
visible = false
margin_left = 3.27731
margin_top = 74.3859
margin_right = 238.277
margin_bottom = 95.3859
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Invalid name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="."]
margin_left = 403.0
margin_top = 288.0
margin_right = 638.0
margin_bottom = 350.0
text = "Join"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="LineEdit" parent="Join"]
margin_left = -0.0474548
margin_top = 78.0845
margin_right = 236.953
margin_bottom = 102.085
align = 1
placeholder_text = "Enter the host's IP address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvalidIP" type="Label" parent="Join"]
visible = false
margin_left = 0.952545
margin_top = 116.085
margin_right = 235.953
margin_bottom = 137.085
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Invalid IP address or name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connecting" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="Connecting"]
margin_right = 1024.0
margin_bottom = 600.0
text = "(Connection Status Text)"
align = 1
valign = 1

[node name="MAXPLAYERS" type="Label" parent="."]
visible = false
margin_left = 55.8024
margin_top = 125.052
margin_right = 162.802
margin_bottom = 139.052
rect_scale = Vector2( 1.50708, 1.67416 )
text = "MAX PLAYERS: 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="Button" parent="MAXPLAYERS"]
margin_left = 42.5399
margin_top = 17.5703
margin_right = 59.5399
margin_bottom = 37.5703
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="Button" parent="MAXPLAYERS"]
margin_left = 41.4077
margin_top = -27.5703
margin_right = 61.4077
margin_bottom = -7.57028
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Offline" type="CheckBox" parent="."]
visible = false
margin_left = 90.1171
margin_top = 209.834
margin_right = 172.117
margin_bottom = 233.834
text = "OFFLINE"

[node name="Name" type="LineEdit" parent="."]
margin_left = 403.542
margin_top = 209.871
margin_right = 640.542
margin_bottom = 233.871
align = 1
max_length = 10
placeholder_text = "Enter your Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sensivity" type="HSlider" parent="Settings"]
margin_left = 46.5597
margin_top = 275.419
margin_right = 234.56
margin_bottom = 291.419
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Settings/Sensivity"]
margin_left = 80.6337
margin_top = 18.0187
margin_right = 120.634
margin_bottom = 32.0187
text = "1"

[node name="ColorPicker" type="VScrollBar" parent="."]
visible = false
margin_left = 116.704
margin_top = 358.869
margin_right = 145.704
margin_bottom = 498.869
max_value = 7.0
step = 1.0

[node name="Color" type="Label" parent="ColorPicker"]
margin_left = 46.4208
margin_top = 64.0384
margin_right = 91.4208
margin_bottom = 78.0384
custom_colors/font_color = Color( 0.184314, 0.564706, 0.976471, 1 )
text = "COLOR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
margin_left = 54.4025
margin_top = 24.2386
margin_right = 166.403
margin_bottom = 44.2386
text = "SETTINGS"

[node name="MapSelect" type="HScrollBar" parent="."]
margin_left = 788.047
margin_top = 245.309
margin_right = 870.048
margin_bottom = 257.309
min_value = 1.0
max_value = 3.0
step = 1.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MapSelect"]
margin_left = 17.569
margin_top = 16.7323
margin_right = 57.569
margin_bottom = 30.7323
text = "1 map"

[node name="GameName" type="Label" parent="."]
margin_left = 383.191
margin_top = 19.497
margin_right = 496.191
margin_bottom = 33.497
rect_scale = Vector2( 2.44, 3.04 )
custom_colors/font_color = Color( 0.243137, 1, 0, 1 )
text = "FPS MULTIPLAYER"
[connection signal="pressed" from="Host" to="Host" method="host"]
[connection signal="set_connect_type" from="Host" to="Connecting" method="set_connect_type"]
[connection signal="pressed" from="Join" to="Join" method="_pressed"]
[connection signal="set_connect_type" from="Join" to="Connecting" method="set_connect_type"]
[connection signal="pressed" from="MAXPLAYERS/Down" to="." method="_on_Down_pressed"]
[connection signal="pressed" from="MAXPLAYERS/Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="Offline" to="." method="_on_Offline_pressed"]
[connection signal="text_changed" from="Name" to="Settings" method="_on_Name_text_changed"]
[connection signal="value_changed" from="Settings/Sensivity" to="Settings" method="_on_Sensivity_value_changed"]
[connection signal="value_changed" from="ColorPicker" to="." method="_on_ColorPicker_value_changed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="value_changed" from="MapSelect" to="." method="_on_MapSelect_value_changed"]
